feat(TDI-43423): Azure Dynamics 365 CRM component (#4468)
* Update library sources from microsoft repo